--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
     background-color: var(--background-color);
     color: var(--primery-text-color);
     font-family: Roboto, sans-serif;
+    font-style: normal;
     letter-spacing: 0.03em;
 }
 
@@ -33,7 +34,6 @@ li {
 /* Логотип */
 .logo {
 font-family: Raleway, Oleo Script, sans-serif;
-font-style: normal;
 font-weight: bold;
 font-size: 26px;
 line-height: 31px;
@@ -62,6 +62,7 @@ color: #2196F3;
     color: var(--accent-color);
 }
 
+/*index*/
 /* hero */
 h1 {
     color: var(--hero-text-color);
@@ -136,4 +137,31 @@ text-align: center;
 }
 .logof span:hover {
     color: var(--accent-color);
+}
+
+/*portfolio*/
+.buttons button{
+    color: var(--primery-text-color);
+    background-color: var(--background-team-color);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.63;
+    text-align: center;
+}
+.buttons button:hover,
+.buttons button:focus{
+    color: var(--hero-text-color);
+    background-color: var(--accent-color);
+}
+.cards h2{
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+    text-align: left;
+}
+.cards p{
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 1.88;
 }
